fix inpit spacing

--- a/src/App.scss
+++ b/src/App.scss
@@ -522,6 +522,8 @@
       padding: 0;
       width: 300px;
       color: #ffffff;
+      height: 25px;
+      margin-top: 19px;
 
       &::placeholder {
         color: #ffffff;
